@@ -10,6 +10,9 @@ Changes with Apache 2.3.3
      mod_proxy_ftp: NULL pointer dereference on error paths.
      [Stefan Fritsch <sf fritsch.de>, Joe Orton]
 
+  *) mod_dav_fs; Return 409 instead of 500 for a LOCK request if the parent
+     resource does not exist or is not a collection. PR 43465. [Stefan Fritsch]
+
   *) mod_dav_fs: Return 409 instead of 500 for Litmus test case copy_nodestcoll
      (a COPY request where the parent of the destination resource does not
      exist). PR 39299. [Stefan Fritsch]
